--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.1",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
